# ring-signature

./: .gitattributes  Cargo.toml  README.md  shuttle_prebuild.sh  slide.html  slide.md
.github/workflows/: ci.yaml  deploy.yaml
client-tauri/: .env  .gitignore  package.json  pnpm-lock.yaml
client-tauri/src/: App.tsx  SignPage.tsx  VerifyPage.tsx  api.ts  main.tsx
client-tauri/src-tauri/: Cargo.toml  tauri.conf.json
client-tauri/src-tauri/bundle/hooks/: linuxdeploy-plugin-gtk.sh
client-tauri/src-tauri/src/: lib.rs
client-tauri/src/api/: index.ts
client-tauri/src/components/: RecordCard.tsx  UserRow.tsx
client-tauri/src/hooks/: useSign.ts  useSignatures.ts  useVerify.ts
client-tauri/src/pages/: SignPage.tsx  VerifyPage.tsx
client-tauri/src/types/: index.ts
client-wasm/: Cargo.toml
client-wasm/.cargo/: config.toml
client-wasm/src/: lib.rs
common/: Cargo.toml  generate_pem_key.sh  generate_pgp_key.sh  signature.json
common/src/: constants.rs  crypto_utils.rs  error.rs  lib.rs  main.rs  models.rs  ring.rs  rsa.rs  serialization.rs
server/: Cargo.toml
server/.sqlx/: query-177febb5192e9dd34f83d3168f88b1e2c852024c5b1daf5a25d034617a9e72e5.json  query-5f5fda7e2c11d1ab1418a19f4dd7654141a3835982998229b5063e6f4dc8b64a.json  query-81772a3c2b68420f9ea803f3765916924bc4a2d9f3ea6b9a67ac64003a828332.json  query-ea8f79597e0e7e2082eeba07cea4c97d18d22562f584a6e09befcb8ce0ee324e.json  query-eefb8665dae3d91c9a69722fa7935f360aea43989fc4d22fc42e3c133db67e78.json
server/migrations/: 20250417141524_create_tables.sql  20250420034454_add_message.sql
server/src/: db.rs  main.rs  models.rs  utils.rs
server/src/domain/: mod.rs  signature.rs
server/src/handlers/: mod.rs  signatures.rs  users.rs
server/src/handlers/routes/: signatures.rs
server/src/repositories/: mod.rs  signature_repository.rs
server/src/routes/: mod.rs  signatures.rs  users.rs
server/src/usecases/: mod.rs  signature_usecase.rs
src/: constants.rs  crypto_utils.rs  error.rs  lib.rs  main.rs  ring.rs  rsa.rs
