[package]
name = "client-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
 serde-wasm-bindgen = "0.5"
common = { path = "../common" }
num-bigint = "0.4"
gloo-file = { version = "0.2", features = ["futures"] }
js-sys = "0.3"