[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
anyhow = "1.0.98"
block-padding = "0.3.3"
cbc = "0.1.2"
chacha20 = "0.9.1"
cipher = "0.4.4"
ctr = "0.9.2"
env_logger = "0.11.6"
hex = "0.4.3"
hex-literal = "1.0.0"
log = "0.4.26"
num-bigint = { version = "0.4.6", features = ["rand"] }
num-integer = "0.1.46"
num-modular = "0.6.1"
num-prime = "0.4.4"
num-traits = "0.2.19"
pem = "3.0.5"
primal = "0.3.3"
proptest = "1.6.0"
rand = "0.8.5"
rsa = "0.9.7"
sha3 = "0.10.8"
thiserror = "2.0.12"
pgp = "0.15.0"
sequoia-openpgp = "2.0.0"
dialoguer = "0.11.0"
serde = {version = "1.0.219" ,  features = ["derive"] }
serde_json = "1.0.140"
