[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
num-bigint = "0.4"
common = { path = "../common" }
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.17"
tower-http = { version = "0.3", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
